Removed 0 directory and updated index.html

--- a/index.html
+++ b/index.html
@@ -1,30 +1,50 @@
-<html><body>
+<html>
+<head>
+<style type="text/css">
+  h1, a {
+    font-family: Helvetica, arial, freesans, clean, sans-serif;
+  }
+  a:link, a:visited {
+    text-decoration:none;
+    color: #03d;
+  }
+  a:hover, a:active {
+    text-decoration:none;
+    color: #000;
+  }
+  ul {
+    list-style-type: circle;
+  }
+</style>
+</head>
+<body>
+<h1>JSAV Exercises</h1>
 <ul>
-<li><a href="0/exercises/jsav/binarytree-postorder.html">0/exercises/jsav/binarytree-postorder.html</a></li>
-<li><a href="0/exercises/jsav/radixExchangeSort.html">0/exercises/jsav/radixExchangeSort.html</a></li>
-<li><a href="0/exercises/jsav/digitalSearchTree.html">0/exercises/jsav/digitalSearchTree.html</a></li>
-<li><a href="0/exercises/jsav/infixToPostfix.html">0/exercises/jsav/infixToPostfix.html</a></li>
-<li><a href="0/exercises/jsav/binaryheap-insert-proficiency.html">0/exercises/jsav/binaryheap-insert-proficiency.html</a></li>
-<li><a href="0/exercises/jsav/BST-insert-proficiency.html">0/exercises/jsav/BST-insert-proficiency.html</a></li>
-<li><a href="0/exercises/jsav/binarytree-inorder.html">0/exercises/jsav/binarytree-inorder.html</a></li>
-<li><a href="0/exercises/jsav/red-black-tree-proficiency.html">0/exercises/jsav/red-black-tree-proficiency.html</a></li>
-<li><a href="0/exercises/jsav/selectionSort2.html">0/exercises/jsav/selectionSort2.html</a></li>
-<li><a href="0/exercises/jsav/BST-search-proficiency.html">0/exercises/jsav/BST-search-proficiency.html</a></li>
-<li><a href="0/exercises/jsav/interpolationSearch.html">0/exercises/jsav/interpolationSearch.html</a></li>
-<li><a href="0/exercises/jsav/red-black-tree-coloring.html">0/exercises/jsav/red-black-tree-coloring.html</a></li>
-<li><a href="0/exercises/jsav/stackTest.html">0/exercises/jsav/stackTest.html</a></li>
-<li><a href="0/exercises/jsav/AVL-insert.html">0/exercises/jsav/AVL-insert.html</a></li>
-<li><a href="0/exercises/jsav/binaryheap-delete-proficiency.html">0/exercises/jsav/binaryheap-delete-proficiency.html</a></li>
-<li><a href="0/exercises/jsav/binarytree-levelorder.html">0/exercises/jsav/binarytree-levelorder.html</a></li>
-<li><a href="0/exercises/jsav/radixTrie.html">0/exercises/jsav/radixTrie.html</a></li>
-<li><a href="0/exercises/jsav/binarytree-preorder.html">0/exercises/jsav/binarytree-preorder.html</a></li>
-<li><a href="0/exercises/jsav/rotation-proficiency.html">0/exercises/jsav/rotation-proficiency.html</a></li>
-<li><a href="0/exercises/jsav/binarySearch.html">0/exercises/jsav/binarySearch.html</a></li>
-<li><a href="0/exercises/jsav/postfixEvaluation.html">0/exercises/jsav/postfixEvaluation.html</a></li>
-<li><a href="0/exercises/jsav/ClickHandlerTest.html">0/exercises/jsav/ClickHandlerTest.html</a></li>
-<li><a href="0/exercises/jsav/insertionSort.html">0/exercises/jsav/insertionSort.html</a></li>
-<li><a href="0/exercises/jsav/binaryheap-buildheap-proficiency.html">0/exercises/jsav/binaryheap-buildheap-proficiency.html</a></li>
-<li><a href="0/exercises/jsav/insertionSortWithoutSwap.html">0/exercises/jsav/insertionSortWithoutSwap.html</a></li>
-<li><a href="0/exercises/jsav/BST-delete-proficiency.html">0/exercises/jsav/BST-delete-proficiency.html</a></li>
-<li><a href="0/exercises/jsav/selectionSort.html">0/exercises/jsav/selectionSort.html</a></li>
+<li><a href="a/exercises/jsav/binarytree-postorder.html">a/exercises/jsav/binarytree-postorder.html</a></li>
+<li><a href="a/exercises/jsav/radixExchangeSort.html">a/exercises/jsav/radixExchangeSort.html</a></li>
+<li><a href="a/exercises/jsav/digitalSearchTree.html">a/exercises/jsav/digitalSearchTree.html</a></li>
+<li><a href="a/exercises/jsav/infixToPostfix.html">a/exercises/jsav/infixToPostfix.html</a></li>
+<li><a href="a/exercises/jsav/binaryheap-insert-proficiency.html">a/exercises/jsav/binaryheap-insert-proficiency.html</a></li>
+<li><a href="a/exercises/jsav/BST-insert-proficiency.html">a/exercises/jsav/BST-insert-proficiency.html</a></li>
+<li><a href="a/exercises/jsav/binarytree-inorder.html">a/exercises/jsav/binarytree-inorder.html</a></li>
+<li><a href="a/exercises/jsav/red-black-tree-proficiency.html">a/exercises/jsav/red-black-tree-proficiency.html</a></li>
+<li><a href="a/exercises/jsav/selectionSort2.html">a/exercises/jsav/selectionSort2.html</a></li>
+<li><a href="a/exercises/jsav/BST-search-proficiency.html">a/exercises/jsav/BST-search-proficiency.html</a></li>
+<li><a href="a/exercises/jsav/interpolationSearch.html">a/exercises/jsav/interpolationSearch.html</a></li>
+<li><a href="a/exercises/jsav/red-black-tree-coloring.html">a/exercises/jsav/red-black-tree-coloring.html</a></li>
+<li><a href="a/exercises/jsav/stackTest.html">a/exercises/jsav/stackTest.html</a></li>
+<li><a href="a/exercises/jsav/AVL-insert.html">a/exercises/jsav/AVL-insert.html</a></li>
+<li><a href="a/exercises/jsav/binaryheap-delete-proficiency.html">a/exercises/jsav/binaryheap-delete-proficiency.html</a></li>
+<li><a href="a/exercises/jsav/binarytree-levelorder.html">a/exercises/jsav/binarytree-levelorder.html</a></li>
+<li><a href="a/exercises/jsav/radixTrie.html">a/exercises/jsav/radixTrie.html</a></li>
+<li><a href="a/exercises/jsav/binarytree-preorder.html">a/exercises/jsav/binarytree-preorder.html</a></li>
+<li><a href="a/exercises/jsav/rotation-proficiency.html">a/exercises/jsav/rotation-proficiency.html</a></li>
+<li><a href="a/exercises/jsav/binarySearch.html">a/exercises/jsav/binarySearch.html</a></li>
+<li><a href="a/exercises/jsav/postfixEvaluation.html">a/exercises/jsav/postfixEvaluation.html</a></li>
+<li><a href="a/exercises/jsav/ClickHandlerTest.html">a/exercises/jsav/ClickHandlerTest.html</a></li>
+<li><a href="a/exercises/jsav/insertionSort.html">a/exercises/jsav/insertionSort.html</a></li>
+<li><a href="a/exercises/jsav/binaryheap-buildheap-proficiency.html">a/exercises/jsav/binaryheap-buildheap-proficiency.html</a></li>
+<li><a href="a/exercises/jsav/insertionSortWithoutSwap.html">a/exercises/jsav/insertionSortWithoutSwap.html</a></li>
+<li><a href="a/exercises/jsav/BST-delete-proficiency.html">a/exercises/jsav/BST-delete-proficiency.html</a></li>
+<li><a href="a/exercises/jsav/selectionSort.html">a/exercises/jsav/selectionSort.html</a></li>
 </ul><body></html>
