--- a/AV/Development/DijkstraPE.html
+++ b/AV/Development/DijkstraPE.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Kruskal's Algorithm Proficiency Exercise</title>
+    <title>Dijkstra's Algorithm Proficiency Exercise</title>
     <meta charset="utf-8" />
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-    <link rel="stylesheet" href="KruskalPE.css" />
+    <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
+    <link rel="stylesheet" href="DijkstraPE.css" />
   </head>
   <body>
     <div id="container">
@@ -25,7 +26,7 @@
       </table>
       <form class="avcontainer">
         <div class="jsavcanvas">
-          <p class="instructLabel">Instructions:</p>
+          <p class="instructLabel"></p>
           <p class="instructions"></p>
           <p id="procontrols">
             <span class="jsavscore"></span>
@@ -42,6 +43,6 @@
     <script src="../../lib/odsaUtils-min.js"></script>
     <script src="../../lib/odsaAV-min.js"></script>
     <script src="graphUtils.js"></script>
-    <script src="KruskalPE.js"></script>
+    <script src="DijkstraPE.js"></script>
   </body>
 </html>
