--- a/AV/Development/graphDFS.html
+++ b/AV/Development/graphDFS.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Kruskal's Algorithm</title>
+  <title>Graph Depth First Search</title>
   <meta charset="utf-8" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
-  <link rel="stylesheet" href="KruskalAV.css" type="text/css" />
+  <link rel="stylesheet" href="graphDFS.css" type="text/css" />
 </head>
 
 <body>
@@ -16,7 +16,7 @@
         <input type="button" id="help" name="help" value="Help" />
       </td>
       <td class="headerCenter avTitle">
-        Kruskal's Minimum Spanning Tree Algorithm
+        Depth First Search Graph Traversal
       </td>
       <td class="headerRight">
         <input type="button" id="about" name="about" value="About" />
@@ -30,10 +30,11 @@
       <input type="button" id="reset" name="reset" value="Reset" />
     </p>
   </form>
+
   <div class="avcontainer">
     <span class="jsavcounter"></span>
     <div class="jsavcontrols"></div>
-    <p class="jsavoutput jsavline" readonly="readonly"></p>
+    <p class="jsavoutput jsavline"></p>
   </div>
 </div>
 
@@ -42,8 +43,8 @@
 <script src="../../JSAV/lib/jquery.transit.js"></script>
 <script src="../../JSAV/lib/raphael.js"></script>
 <script src="../../JSAV/build/JSAV-min.js"></script>
-<script src="../../lib/odsaUtils-min.js"></script>
-<script src="../../lib/odsaAV-min.js"></script>
-<script src="KruskalAV.js"></script>
+<script src="../../lib/odsaUtils.js"></script>
+<script src="../../lib/odsaAV.js"></script>
+<script src="graphDFS.js"></script>
 </body>
 </html>
