--- a/AV/Development/redBlackTreePRO.html
+++ b/AV/Development/redBlackTreePRO.html
@@ -58,7 +58,7 @@
   <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
   <script src="../../JSAV/lib/jquery.transit.js"></script>
   <script src="../../JSAV/lib/raphael.js"></script>
-  <script src="../../JSAV/build/JSAV.js"></script>
+  <script src="../../JSAV/build/JSAV-min.js"></script>
   <script src="../../DataStructures/AVLextension.js"></script>
   <script src="../../DataStructures/redblacktree.js"></script>
   <script src="../../JSAV/extras/stack.js"></script>
