--- a/AV/Development/radixExchangeSortPRO.html
+++ b/AV/Development/radixExchangeSortPRO.html
@@ -31,6 +31,9 @@
     #jsavcontainer .jsavline {
       height: 20px;
     }
+    .jsavcode {
+      margin: 0px;
+    }
   </style>
 </head>
 
@@ -39,6 +42,10 @@
     <h1 class="exerciseTitle"></h1>
     <p class="instructLabel"></p>
     <p class="instructions"></p>
+    <!-- This class of codeblock with child of class code are used to float
+    the pseudocode to the left side of the screen. The inner class code is
+    needed, as JSAV can only append to something, not add inside :) -->
+    <div class="codeblock" style="float: left;"><div class="code"> </div></div>
     <p align="center" class="jsavexercisecontrols"></p>
     <p class="jsavscore"></p>
     <p class="jsavoutput jsavline"></p>
