--- a/AV/Development/DijkstraPE-research-v2.html
+++ b/AV/Development/DijkstraPE-research-v2.html
@@ -44,6 +44,7 @@
     <script src="../../lib/odsaAV-min.js"></script>
     <script src="graphUtils.js"></script>
     <script src="../../lib/jsav-exercise-recorder-bundle.js"></script>
+    <script src="PqOperationSequence.js"></script>
     <script src="DijkstraPE-research-v2.js"></script>
   </body>
 </html>
