--- a/AV/Development/PrimAVPE-scaffolded.html
+++ b/AV/Development/PrimAVPE-scaffolded.html
@@ -44,6 +44,7 @@
     <script src="../../lib/odsaAV-min.js"></script>
     <script src="graphUtils.js"></script>
     <script src="../../lib/jsav-exercise-recorder-bundle.js"></script>
+    <script src="PqOperationSequence.js"></script>
     <script src="PrimAVPE-scaffolded.js"></script>
   </body>
 </html>
