--- a/AV/Development/PrimAVPE-scaffolded-v2.html
+++ b/AV/Development/PrimAVPE-scaffolded-v2.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
-    <link rel="stylesheet" href="PrimAVPE-scaffolded.css" />
+    <link rel="stylesheet" href="PrimAVPE-scaffolded-v2.css" />
   </head>
   <body>
     <div id="container">
@@ -45,6 +45,6 @@
     <script src="graphUtils.js"></script>
     <script src="../../lib/jsav-exercise-recorder-bundle.js"></script>
     <script src="PqOperationSequence.js"></script>
-    <script src="PrimAVPE-scaffolded.js"></script>
+    <script src="PrimAVPE-scaffolded-v2.js"></script>
   </body>
 </html>
