Testbench HTML: <meta> robots noindex
Added the following line to the HTML files in the testbench:
<meta name="robots" content="noindex, nofollow" />

This allows publishing the testbench in the public internet as a demo,
but still hiding the exercises from students and other third parties
via search engines.

--- a/AV/Development/BinaryPointerTreeTest.html
+++ b/AV/Development/BinaryPointerTreeTest.html
@@ -3,6 +3,7 @@
 <head>
   <title>Binary Pointer Tree Test</title>
   <meta charset="utf-8" />
+  <meta name="robots" content="noindex, nofollow" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="proficiency.css" type="text/css" />
   <link rel="stylesheet" href="BinaryPointerTree.css" type="text/css" />
