--- a/AV/Development/DijkstraPE-research.html
+++ b/AV/Development/DijkstraPE-research.html
@@ -3,6 +3,7 @@
   <head>
     <title>Dijkstra's Algorithm Proficiency Exercise</title>
     <meta charset="utf-8" />
+    <meta name="robots" content="noindex, nofollow" />
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
