--- a/AV/Development/PqOperationSequence-test.html
+++ b/AV/Development/PqOperationSequence-test.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="utf-8">
+<meta name="robots" content="noindex, nofollow" />
 <title>Test Suite</title>
 <link rel="stylesheet" href="https://code.jquery.com/qunit/qunit-2.19.4.css">
 </head>
