--- a/AV/Development/commonTriePRO.html
+++ b/AV/Development/commonTriePRO.html
@@ -2,7 +2,9 @@
 <html>
 <head>
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+  <meta name="robots" content="noindex, nofollow" />
   <title>Common Trie</title>
+  <meta name="robots" content="noindex, nofollow" />
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
   <link rel="stylesheet" href="proficiency.css" type="text/css" />
