--- a/AV/Development/rotationPRO-v2.html
+++ b/AV/Development/rotationPRO-v2.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
+  <meta name="robots" content="noindex, nofollow" />
   <title>Rotation</title>
   <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
   <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
