--- a/AV/Sorting/heapsortPRO.html
+++ b/AV/Sorting/heapsortPRO.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <title>Heapsort</title>
-    <meta charset="utf-8" />
+    <meta name="robots" content="noindex, nofollow" />
     <link rel="stylesheet" href="../../JSAV/css/JSAV.css" type="text/css" />
     <link rel="stylesheet" href="../../lib/odsaAV-min.css" type="text/css" />
    <link rel="stylesheet" href="../../lib/odsaStyle-min.css" type="text/css" />
